Remove left-over references to matplotlib

--- a/example_2_eye_movements_interactive.ipynb
+++ b/example_2_eye_movements_interactive.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Needs ipywidgets and ipympl\n",
+    "# Needs ipywidgets\n",
     "import ipywidgets as widgets\n",
     "import threading\n",
     "from brian2 import *"
