Fix hardcoded sound file name

--- a/example_4_microphone.ipynb
+++ b/example_4_microphone.ipynb
@@ -104,7 +104,7 @@
     "    @implementation('cpp','//actual code in sound_from_file.cpp',\n",
     "                    sources=[os.path.abspath('sound_from_file.cpp')],\n",
     "                    headers=['\"{}\"'.format(os.path.abspath('sound_input.h'))],\n",
-    "                    define_macros=[('FILENAME', os.path.abspath('scale_flute.wav'))])\n",
+    "                    define_macros=[('FILENAME', r'\\\"{}\\\"'.format(os.path.abspath('scale_flute.wav')))])\n",
     "    @check_units(t=second, result=1)\n",
     "    def get_sample(t):\n",
     "        raise NotImplementedError('Use a C++-based code generation target.')"
@@ -168,7 +168,7 @@
    "source": [
     "spikes = SpikeMonitor(neurons)\n",
     "\n",
-    "run(runtime, report='text')"
+    "run(runtime)"
    ]
   },
   {
