example 4: set standalone directory

--- a/example_4_microphone.ipynb
+++ b/example_4_microphone.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_device('cpp_standalone')"
+    "set_device('cpp_standalone', directory='example_4')"
    ]
   },
   {
