example 1: minor fixes

--- a/example_1_pyloric_network.ipynb
+++ b/example_1_pyloric_network.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before describing a model, we set up the Brian simulator and the jupyter notebook:"
+    "Before describing a model, we set up the Brian simulator:"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_device('cpp_standalone', build_on_run=False, directory=\"example_1\")"
+    "set_device('cpp_standalone', build_on_run=False)"
    ]
   },
   {
@@ -89,7 +89,6 @@
     "\\frac{\\mathrm{d}w}{\\mathrm{d}t} = \\left(c - d\\left(v - v_T\\right)^2 - w\\right)\\frac{1}{\\tau} \\\\\n",
     "\\frac{\\mathrm{d}x}{\\mathrm{d}t} = \\left(s\\left(v - v_r\\right) - x\\right)\\frac{1}{\\tau_x}\n",
     "$$\n",
-    "TODO: explain a bit...\n",
     "\n",
     "In Brian, such equations can be specified as a string, following mathematic notation as closely as possible. The physical dimensions of the variable defined in the respective line has to be specified after a colon; this allows Brian to check for the consistency of the dimensions and therefore avoid the use of incorrect equations:"
    ]
@@ -229,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We've defined a group of three neurons, each one being of a different type. We set the neurons' label accordingly and set the initial conditions for the variables $v$, $w$, and $z$, as well as the neuron-type dependent valyes for the constant $Ca_\\mathrm{target}$:"
+    "We've defined a group of three neurons, each one being of a different type. We set the neurons' label accordingly and set the initial conditions for the variables $v$, $w$, and $z$, as well as the neuron-type dependent values for the constant $Ca_\\mathrm{target}$:"
    ]
   },
   {
@@ -249,7 +248,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this model, we want to describe two classes of synapses, \"fast\" and \"slow\". Both synaptic currents are graded functions of the presynaptic membrane potential. For the fast synapses, the current is an instantaneous function fo both the pre-synaptic and the post-synaptic membrane potential:"
+    "The predefined `rand()` function returns random number from a uniform distribution between 0 and 1, i.e. $w$ is initialized to be between 0nA and -5nA, and $z$ between -0.1 and 0.1.\n",
+    "\n",
+    "For this model, we want to describe two classes of synapses, \"fast\" and \"slow\". Both synaptic currents are graded functions of the presynaptic membrane potential. For the fast synapses, the current is an instantaneous function of both the pre-synaptic and the post-synaptic membrane potential:"
    ]
   },
   {
@@ -424,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the computationally efficient \"standalone mode\", the above statements describe the simulation protocol without actually launching the compilatino and execution process. We do this now:"
+    "In the computationally efficient \"standalone mode\", the above statements describe the simulation protocol without actually launching the compilation and execution process. We do this now:"
    ]
   },
   {
@@ -433,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device.build()"
+    "device.build(directory='example_1')"
    ]
   },
   {
