example 3: change axon-->neuron

--- a/example_3_bisection.ipynb
+++ b/example_3_bisection.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "This example demonstrate how a control flow, where simulation parameters depend on the results of previous simulations, can be expressed by making use of standard control structures in Python. By having access to the full expressivity of a general purpose programming language, expressing such control flow is straight-forward; this would not be the case for a declarative model description.\n",
     "\n",
-    "Our goal in this toy example is to find the threshold voltage of an axon section as a function of the density of sodium channels.\n",
+    "Our goal in this toy example is to find the threshold voltage of neuron as a function of the density of sodium channels.\n",
     "\n",
     "We start with the basic setup:"
    ]
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our model of the axon is the classical model from Hodgkin and Huxley (1952). Note that the membrane potential is shifted, i.e. the resting potential is at 0mV:"
+    "Our model of the neuron is based on the classical model of from Hodgkin and Huxley (1952). Note that this is not actually a model of a neuron, but rather of a (space-clamped) axon. However, to avoid confusion with spatially extended models, we simply use the term \"neuron\" here. In this model, the membrane potential is shifted, i.e. the resting potential is at 0mV:"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We simulate 100 axon (unconnected) segments at the same time, each of them having a density of sodium channels between 15 and 100 mS/cm²:"
+    "We simulate 100 neurons at the same time, each of them having a density of sodium channels between 15 and 100 mS/cm²:"
    ]
   },
   {
@@ -73,8 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "axon = NeuronGroup(100, eqs, method='rk4', threshold='v>50*mV')\n",
-    "axon.gNa = 'gNa_min + (gNa_max - gNa_min)*1.0*i/N'"
+    "neurons = NeuronGroup(100, eqs, method='rk4', threshold='v>50*mV')\n",
+    "neurons.gNa = 'gNa_min + (gNa_max - gNa_min)*1.0*i/N'"
    ]
   },
   {
@@ -90,17 +90,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "axon.v = 0*mV\n",
-    "axon.m = '1/(1 + betam/alpham)'\n",
-    "axon.n = '1/(1 + betan/alphan)'\n",
-    "axon.h = '1/(1 + betah/alphah)'"
+    "neurons.v = 0*mV\n",
+    "neurons.m = '1/(1 + betam/alpham)'\n",
+    "neurons.n = '1/(1 + betan/alphan)'\n",
+    "neurons.h = '1/(1 + betah/alphah)'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We record the spiking activity of the axon segments and store the current network state so that we can later restore it and run another iteration of our experiment:"
+    "We record the spiking activity of the neurons and store the current network state so that we can later restore it and run another iteration of our experiment:"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "S = SpikeMonitor(axon)\n",
+    "S = SpikeMonitor(neurons)\n",
     "store()"
    ]
   },
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The algorithm we use here to find the voltage threshold is a simple bisection: we try to find the threshold voltage of an axon section by repeatedly testing values and increasing or decreasing these values depending on whether we observe a spike or not. By continously halving the size of the correction, we quickly converge to a precise estimate.\n",
+    "The algorithm we use here to find the voltage threshold is a simple bisection: we try to find the threshold voltage of a neuron by repeatedly testing values and increasing or decreasing these values depending on whether we observe a spike or not. By continously halving the size of the correction, we quickly converge to a precise estimate.\n",
     "\n",
     "We start with the same initial estimate for all segments, 25mV above the resting potential, and the same value for the size of the \"correction step\":"
    ]
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v0 = 25*mV*ones(len(axon))\n",
+    "v0 = 25*mV*ones(len(neurons))\n",
     "step = 25*mV"
    ]
   },
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "estimates = np.full((11, len(axon)), np.nan)*mV\n",
+    "estimates = np.full((11, len(neurons)), np.nan)*mV\n",
     "estimates[0, :] = v0"
    ]
   },
@@ -166,12 +166,12 @@
     "    # Reset to the initial state\n",
     "    restore()\n",
     "    # Set the membrane potential to our threshold estimate\n",
-    "    axon.v = v0\n",
+    "    neurons.v = v0\n",
     "    # Run the simulation for 20ms\n",
     "    run(20*ms)\n",
-    "    # Decrease the estimates for axon segments that spiked\n",
+    "    # Decrease the estimates for neurons that spiked\n",
     "    v0[S.count > 0] -= step\n",
-    "    # Increase the estimate for axon segments that did not spike\n",
+    "    # Increase the estimate for neurons that did not spike\n",
     "    v0[S.count == 0] += step\n",
     "    # Reduce step size and store current estimate\n",
     "    step /= 2.0\n",
@@ -203,13 +203,13 @@
     "for example, color in zip(examples, colors):\n",
     "    trace = go.Scatter(x=np.arange(11),\n",
     "                       y=estimates[:, example] / mV, \n",
-    "                       name='gNA = %.1fmS/cm$^2$' % (axon.gNa[example]/(mS/cm**2)),\n",
+    "                       name='gNA = %.1fmS/cm$^2$' % (neurons.gNa[example]/(mS/cm**2)),\n",
     "                       marker={'color': color, 'size': 10},\n",
     "                       mode='markers+lines',\n",
     "                       showlegend=False)\n",
     "    fig.append_trace(trace, 1, 1)\n",
     "\n",
-    "trace = go.Scatter(x=axon.gNa/(mS/cm**2),\n",
+    "trace = go.Scatter(x=neurons.gNa/(mS/cm**2),\n",
     "                   y=v0/mV,\n",
     "                   line={'color': 'gray'},\n",
     "                   mode='lines',\n",
@@ -217,12 +217,12 @@
     "                   showlegend=False)\n",
     "fig.append_trace(trace, 2, 1)\n",
     "for idx, (example, color) in enumerate(zip(examples, colors)):\n",
-    "    trace = go.Scatter(x=[axon.gNa[example]/(mS/cm**2)],\n",
+    "    trace = go.Scatter(x=[neurons.gNa[example]/(mS/cm**2)],\n",
     "                       y=[estimates[-1, example]/mV],\n",
     "                       mode='markers',\n",
     "                       marker={'color': color, 'symbol': 'circle', 'size': 15},\n",
     "                       showlegend=False,\n",
-    "                       name='gNA = %.1fmS/cm$^2$' % (axon.gNa[example]/(mS/cm**2)))\n",
+    "                       name='gNA = %.1fmS/cm$^2$' % (neurons.gNa[example]/(mS/cm**2)))\n",
     "    fig.append_trace(trace, 2, 1)\n",
     "fig['layout'].update(xaxis1={'title': 'iteration'},\n",
     "                     xaxis2={'title': 'gNA (in mS/cm²)'},\n",
@@ -233,13 +233,6 @@
     "\n",
     "iplot(fig)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
