--- a/example_3_bisection.ipynb
+++ b/example_3_bisection.ipynb
@@ -225,11 +225,11 @@
     "                       name='gNA = %.1fmS/cm$^2$' % (neurons.gNa[example]/(mS/cm**2)))\n",
     "    fig.append_trace(trace, 2, 1)\n",
     "fig['layout'].update(xaxis1={'title': 'iteration'},\n",
-    "                     xaxis2={'title': 'gNA (in mS/cm²)'},\n",
+    "                     xaxis2={'title': 'gNA (mS/cm²)'},\n",
     "                     yaxis1={'range': (0, 45),\n",
-    "                            'title': 'threshold estimate (in mV)'},\n",
+    "                            'title': 'threshold estimate (mV)'},\n",
     "                     yaxis2={'range': (0, 45),\n",
-    "                             'title': 'threshold estimate (in mV)'})\n",
+    "                             'title': 'threshold estimate (mV)'})\n",
     "\n",
     "iplot(fig)"
    ]
