Add a matplotlib version of the interactive example

--- a/example_2_eye_movements_interactive_matplotlib.ipynb
+++ b/example_2_eye_movements_interactive_matplotlib.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "For a non-interactive version of this example which generates the article's figure see [this notebook](example_2_eye_movements.ipynb).\n",
     "\n",
-    "**This version uses the *plotly* library for consistency with the other examples. However, updating an existing figure is slower than with the *matplotlib* library, so it is not an ideal solution for this example. For a version based on *matplotlib*, see [this notebook](example_2_eye_movements_interactive_matplotlib.ipynb)**"
+    "This notebook is based on *matplotlib* and *ipympl*, which enables quick updates of the plot in real-time. For a version based on *plotly* (as the other, non-interactive examples), see [this notebook](example_2_eye_movements_interactive.ipynb)."
    ]
   },
   {
@@ -17,10 +17,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Needs ipywidgets\n",
+    "# Needs ipywidgets and ipympl\n",
+    "%matplotlib widget\n",
     "import ipywidgets as widgets\n",
     "import threading\n",
-    "from brian2 import *"
+    "from brian2 import *\n",
+    "\n",
+    "plt.ioff()"
    ]
   },
   {
@@ -92,71 +95,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotly import tools\n",
-    "from plotly.offline import iplot, init_notebook_mode\n",
-    "import plotly.graph_objs as go\n",
+    "# Plot preparation\n",
+    "fig, (ax_spikes, ax_position) = plt.subplots(2, 1, gridspec_kw={'height_ratios': (2, 1)}, sharex=True)\n",
+    "h_retina = ax_spikes.plot([], [], '|k', markeredgecolor='k', label='retina')[0]\n",
+    "h_left = ax_spikes.plot([], [], '|', color='C0', markeredgecolor='C0', label='left motoneuron')[0]\n",
+    "h_right = ax_spikes.plot([], [], '|', color='C1', markeredgecolor='C1', label='right motoneuron')[0]\n",
+    "ax_spikes.set(yticks=[], ylabel='neuron index', xticks=[], xlim=(0, 10), ylim=(0, 22))\n",
+    "ax_spikes.spines['bottom'].set_visible(False)\n",
     "\n",
-    "init_notebook_mode(connected=True)\n",
-    "\n",
-    "fig = tools.make_subplots(3, 1, specs=[[{'rowspan': 2}], [None], [{}]],\n",
-    "                          shared_xaxes=True, print_grid=False)\n",
-    "\n",
-    "retina_spikes = go.Scattergl(x=[],\n",
-    "                           y=[],\n",
-    "                           marker={'symbol': 'line-ns', 'line': {'width': 1, 'color':'black'}},\n",
-    "                           mode='markers',\n",
-    "                           name='retina',\n",
-    "                           showlegend=False)\n",
-    "fig.append_trace(retina_spikes, 1, 1)\n",
-    "left_spikes = go.Scattergl(x=[],\n",
-    "                         y=[],\n",
-    "                         marker={'symbol': 'line-ns', 'line': {'width': 1, 'color':'#1f77b4'},\n",
-    "                                 'color':'#1f77b4'},\n",
-    "                         mode='markers',\n",
-    "                         name='left motoneuron',\n",
-    "                         showlegend=False)\n",
-    "fig.append_trace(left_spikes, 1, 1)\n",
-    "right_spikes = go.Scattergl(x=[],\n",
-    "                          y=[],\n",
-    "                          marker={'symbol': 'line-ns', 'line': {'width': 1, 'color':'#ff7f03'},\n",
-    "                                  'color':'#ff7f03'},\n",
-    "                          mode='markers',\n",
-    "                          name='right motoneuron',\n",
-    "                          showlegend=False)\n",
-    "fig.append_trace(right_spikes, 1, 1)\n",
-    "\n",
-    "eye_position = go.Scattergl(x=[],\n",
-    "                          y=[],\n",
-    "                          mode='lines',\n",
-    "                          line={'color': 'black'},\n",
-    "                          name='eye')\n",
-    "fig.append_trace(eye_position, 3, 1)\n",
-    "object_position = go.Scattergl(x=[],\n",
-    "                             y=[],\n",
-    "                             mode='lines',\n",
-    "                             line={'color': '#2ca02c'},\n",
-    "                             name='object')\n",
-    "fig.append_trace(object_position, 3, 1)\n",
-    "\n",
-    "fig['layout'].update(xaxis1={'showline': False,\n",
-    "                             'zeroline': False,\n",
-    "                             'title': 'time (in s)',\n",
-    "                             'range': (0, 10),\n",
-    "                             'ticktext': ['-10', '-8', '-6', '-4', '-2', '0'],\n",
-    "                             'tickvals': [0, 2, 4, 6, 8, 10]},\n",
-    "                     yaxis1={'title': 'neuron index',\n",
-    "                             'showticklabels': False,\n",
-    "                             'showline': True,\n",
-    "                             'range': (0, N+2)},\n",
-    "                     yaxis2={'tickmode': 'array',\n",
-    "                             'ticktext': ['left', 'right'],\n",
-    "                             'tickvals': [-1, 1],\n",
-    "                             'range': [-1.05, 1.05],\n",
-    "                             'zeroline': True,\n",
-    "                             'showline': True}\n",
-    "                     )\n",
-    "fig_widget = go.FigureWidget(fig)\n",
-    "retina_spikes, left_spikes, right_spikes, eye_position, object_position = fig_widget.data"
+    "ax_position.axhline(0, color='gray')\n",
+    "h_eye = ax_position.plot([], [], 'k', label='eye')[0]\n",
+    "h_object = ax_position.plot([], [], color='C2', label='object')[0]\n",
+    "ax_position.set(yticks=[-1, 1], yticklabels=['left', 'right'], xlabel='time (s)',\n",
+    "                xticks=np.arange(11, 2), xticklabels=np.arange(11, 2)-10,\n",
+    "                xlim=(0, 10), ylim=(-1, 1))\n",
+    "ax_position.legend(loc='upper right', bbox_to_anchor=(1.0, 2.0));"
    ]
   },
   {
@@ -183,7 +136,7 @@
     "                                    value=0.5, min=0, max=2)\n",
     "sliders = widgets.VBox([widgets.HBox([time_label, start_stop_button]),\n",
     "                        tau_obj_slider, tau_muscle_slider, weight_slider])\n",
-    "layout = widgets.HBox([fig_widget, sliders])"
+    "layout = widgets.HBox([fig.canvas, sliders])"
    ]
   },
   {
@@ -200,26 +153,21 @@
    "outputs": [],
    "source": [
     "should_stop = False\n",
-    "@network_operation(dt=500*ms)\n",
+    "@network_operation(dt=100*ms)\n",
     "def plot_output(t):\n",
-    "    with fig_widget.batch_update():\n",
-    "        cutoff = (t - 10*second)\n",
-    "        # Plot the data of the last 10 seconds\n",
-    "        indices = S_retina.t > cutoff\n",
-    "        retina_spikes.x = (S_retina.t[indices] - cutoff)/second\n",
-    "        retina_spikes.y = S_retina.i[indices]\n",
-    "        motoneuron_trains = S_motoneurons.spike_trains()\n",
-    "        to_plot = motoneuron_trains[0][motoneuron_trains[0] > cutoff]\n",
-    "        left_spikes.x = (to_plot - cutoff)/second\n",
-    "        left_spikes.y = np.ones(len(to_plot))*N\n",
-    "        to_plot = motoneuron_trains[1][motoneuron_trains[1] > cutoff]\n",
-    "        right_spikes.x = (to_plot - cutoff)/second\n",
-    "        right_spikes.y = np.ones(len(to_plot))*(N+1)\n",
-    "        indices = M.t > cutoff\n",
-    "        eye_position.x = (M.t[indices] - cutoff)/second\n",
-    "        eye_position.y = M.x[0][indices]\n",
-    "        object_position.x = (M.t[indices] - cutoff)/second\n",
-    "        object_position.y = M.x_object[0][indices]\n",
+    "    cutoff = (t - 10*second)\n",
+    "    # Plot the data of the last 10 seconds\n",
+    "    indices = S_retina.t > cutoff\n",
+    "    h_retina.set_data((S_retina.t[indices] - cutoff)/second, S_retina.i[indices])\n",
+    "    motoneuron_trains = S_motoneurons.spike_trains()\n",
+    "    to_plot = motoneuron_trains[0][motoneuron_trains[0] > cutoff]\n",
+    "    h_left.set_data((to_plot - cutoff)/second, np.ones(len(to_plot))*N)\n",
+    "    to_plot = motoneuron_trains[1][motoneuron_trains[1] > cutoff]\n",
+    "    h_right.set_data((to_plot - cutoff)/second, np.ones(len(to_plot))*(N+1))\n",
+    "    indices = M.t > cutoff\n",
+    "    h_eye.set_data((M.t[indices] - cutoff)/second, M.x[0][indices])\n",
+    "    h_object.set_data((M.t[indices] - cutoff)/second, M.x_object[0][indices])\n",
+    "    fig.canvas.draw_idle()\n",
     "    time_label.value = 'Time: {:.1f}s'.format(float(t[:]))\n",
     "    # Set the simulation parameters according to user settings\n",
     "    eye.tau_object = tau_obj_slider.value*ms\n",
@@ -297,6 +245,13 @@
    "source": [
     "display(layout)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
