--- a/example_3_bisection.ipynb
+++ b/example_3_bisection.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Quickstart\n",
+    "To run the code below:\n",
+    "\n",
+    "1. Click on the cell to select it.\n",
+    "2. Press `SHIFT+ENTER` on your keyboard or press the play button\n",
+    "   (<button class='fa fa-play icon-play btn btn-xs btn-default'></button>) in the toolbar above.\n",
+    "\n",
+    "Feel free to create new cells using the plus button\n",
+    "(<button class='fa fa-plus icon-plus btn btn-xs btn-default'></button>), or pressing `SHIFT+ENTER` while this cell\n",
+    "is selected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 3 (Using bisection to find a neuron's voltage threshold)\n",
+    "\n",
     "This example demonstrate how a control flow, where simulation parameters depend on the results of previous simulations, can be expressed by making use of standard control structures in Python. By having access to the full expressivity of a general purpose programming language, expressing such control flow is straight-forward; this would not be the case for a declarative model description.\n",
     "\n",
     "Our goal in this toy example is to find the threshold voltage of neuron as a function of the density of sodium channels.\n",
