--- a/example_1_pyloric_network_complex.ipynb
+++ b/example_1_pyloric_network_complex.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example 1 (biophysically detailed model)\n",
+    "### Quickstart\n",
+    "To run the code below:\n",
+    "\n",
+    "1. Click on the cell to select it.\n",
+    "2. Press `SHIFT+ENTER` on your keyboard or press the play button\n",
+    "   (<button class='fa fa-play icon-play btn btn-xs btn-default'></button>) in the toolbar above.\n",
+    "\n",
+    "Feel free to create new cells using the plus button\n",
+    "(<button class='fa fa-plus icon-plus btn btn-xs btn-default'></button>), or pressing `SHIFT+ENTER` while this cell\n",
+    "is selected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 1 (Pyloric network of the crustacean stomatogastric ganglion) – biophysically detailed model\n",
     "\n",
     "This example is equivalent to the [simplified model](example_1_pyloric_network.ipynb), but uses a more biophysically detailed neuron model. For a detailed explanation of the modelling approach and the conversion of equations into Brian syntax, see the comments in that file.\n",
     "\n",
