--- a/example_4_microphone.ipynb
+++ b/example_4_microphone.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Quickstart\n",
+    "To run the code below:\n",
+    "\n",
+    "1. Click on the cell to select it.\n",
+    "2. Press `SHIFT+ENTER` on your keyboard or press the play button\n",
+    "   (<button class='fa fa-play icon-play btn btn-xs btn-default'></button>) in the toolbar above.\n",
+    "\n",
+    "Feel free to create new cells using the plus button\n",
+    "(<button class='fa fa-plus icon-plus btn btn-xs btn-default'></button>), or pressing `SHIFT+ENTER` while this cell\n",
+    "is selected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 4 (neural pitch processing with audio input)\n",
+    "\n",
     "This example is a crude \"pitch detector\" network that performs autocorrelation of an audio signal. It works with coincidence detector neurons that receive two copies of the input (which has been transformed into spikes by an equally crude \"periphery neuron\" model), with a certain delay between the two inputs. Depending on their respective delay, neurons are sensitive to different periodicities.\n",
     "\n",
     "The example shows how Brian's high-level model descriptions can be seemlessly combined with low-level code in a target language, in this case C++.  Such code can be necessary to extend Brian functionalities without sacrificing performance, e.g. in applications that necessitate real-time processing of external stimuli.\n",
