remove unnecessary constant

--- a/example_3_bisection.ipynb
+++ b/example_3_bisection.ipynb
@@ -57,7 +57,6 @@
     "ENa = 115*mV\n",
     "EK = -12*mV\n",
     "gl = 0.3*msiemens/cm**2\n",
-    "gNa0 = 120*msiemens/cm**2\n",
     "gK = 36*msiemens/cm**2\n",
     "gNa_max = 100*msiemens/cm**2\n",
     "gNa_min = 15*msiemens/cm**2\n",
@@ -200,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After the 10 iterations steps, we plot the results:"
+    "After the 10 iteration steps, we plot the results:"
    ]
   },
   {
