Add example for multicompartmental neuron

--- a/index.ipynb
+++ b/index.ipynb
@@ -14,7 +14,10 @@
     "    * [an interactive version of the same example (using *plotly*)](example_2_eye_movements_interactive.ipynb)\n",
     "    * [an interactive version of the same example (using *matplotlib*)](example_2_eye_movements_interactive_matplotlib.ipynb)\n",
     "* [Example 3 (Using bisection to find a neuron's voltage threshold)](example_3_bisection.ipynb)\n",
-    "* [Example 4 (neural pitch processing with audio input)](example_4_microphone.ipynb)"
+    "* [Example 4 (neural pitch processing with audio input)](example_4_microphone.ipynb)\n",
+    "\n",
+    "\n",
+    "* [Appendix: multicompartmental model](example_appendix_multicompartment_model.ipynb)"
    ]
   }
  ],
