Add parameter exploration example

--- a/index.ipynb
+++ b/index.ipynb
@@ -17,7 +17,8 @@
     "* [Example 4 (neural pitch processing with audio input)](example_4_microphone.ipynb)\n",
     "\n",
     "\n",
-    "* [Appendix: multicompartmental model](example_appendix_multicompartment_model.ipynb)"
+    "* [Appendix: multicompartmental model](example_appendix_multicompartment_model.ipynb)\n",
+    "* [Appendix: parameter exploration](example_appendix_parameter_exploration.ipynb)"
    ]
   }
  ],
